[package]
name = "pyzcash"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
name = "pyzcash"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
zcash_address = "0.10"
zcash_keys = { version = "0.12", features = ["orchard", "sapling"] }
zcash_protocol = "0.7"
zip32 = "0.2"
zip321 = "0.6"
